k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: http-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhtp-server
                port:
                  number: 80
